--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<div id="select"  style="top:85px;left:1150px">
 	    <ul>
-	        <li><a href="http://www.skunion.space">Small2Space</a></li>  
+	        <li><a href="http://www.smallsp.skunion.space">Small2Space</a></li>  
       	</ul>
     </div>
 	<div id="select"  style="top:135px;left:1150px">
