--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="theme.css" type="text/css">
 </head>
-
+<script type="text/javascript">
+	if(window.innerWidth && window.innerWidth <= 480){
+		document.location.href="http://www2.skunion.space/m/index.html";
+	}
+</script>
 <head>
 	<title>SKUnion</title>
 	<img src="Pic/LightDark.png" height="60" width="480" id="LightDark" style="position:relative;top:100px;left:50px;z-index:1;">
