--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <script type="text/javascript">
 	if(window.innerWidth && window.innerWidth <= 480){
-		document.location.href="http://www2.skunion.space/m/index.html";
+		document.location.href="http://www2.skunion.space/m/blank.html";
 	}
 </script>
 <head>
