--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
 </script>
 <head>
 	<title>SKUnion</title>
-	<img src="Pic/LightDark.png" height="60" width="480" id="LightDark" style="position:relative;top:100px;left:50px;z-index:1;">
-	<span id="Title1" style="font-weight:bold;position:relative;top:105px;left:-350px;z-index:3;font-size:24px;color:white;">Small2Space X KingWorld</span>
+	<img name="T1" src="Pic/LightDark.png" height="60" width="480" id="LightDark" style="position:relative;top:100px;left:50px;z-index:1;">
+	<span name="T1" id="Title1" style="font-weight:bold;position:relative;top:105px;left:-350px;z-index:3;font-size:24px;color:white;">Small2Space X KingWorld</span>
 </head>
 
 <script type="text/javascript" src="./js/Title.js"></script>
 
 <body>
 
-	<div id="select"  style="top:85px;left:1150px">
+	<div name = "s1" id="select"  style="top:85px;left:1150px;z-index:5;opacity:0.0;">
 	    <ul>
 	        <li><a href="http://www.skunion.space">Small2Space</a></li>  
       	</ul>
     </div>
-	<div id="select"  style="top:135px;left:1150px">
+	<div name = "s2" id="select"  style="top:135px;left:1150px;z-index:4;opacity:0.0;">
 	    <ul>
 	        <li><a href="http://www.kw.skunion.space">KingWorld</a></li>  
       	</ul>
     </div>
-	<div id="select"  style="top:185px;left:1150px">
+	<div name = "s3" id="select"  style="top:185px;left:1150px;z-index:3;opacity:0.0;">
 	    <ul>
 	        <li><a href="#">聯絡客服</a></li>  
       	</ul>
     </div>
-	<div id="select"  style="top:235px;left:1150px">
+	<div name = "s4" id="select"  style="top:235px;left:1150px;z-index:2;opacity:0.0;">
 	    <ul>
 	        <li><a href="#">騷擾契約</a></li>  
       	</ul>
     </div>
-	<div id="select"  style="top:285px;left:1150px">
+	<div name = "s5" id="select"  style="top:285px;left:1150px;z-index:1;opacity:0.0;">
 	    <ul>
 	        <li><a href="#">契約喝水</a></li>  
       	</ul>
@@ -50,8 +50,10 @@
 
 </body>
 
+<script type="text/javascript" src="./js/Select.js"></script>
+
 <body style="	background-image: url(&quot;Pic/BG.png&quot;);	background-position: top left;	background-size: 100%;	background-repeat: no-repeat;background-size:cover;background-color:#343135;">
-  <div class="py-0 px-0 pt-3" style="position:absolute;z-index:0;">
+  <div id = "picShower" class="py-0 px-0 pt-3" style="position:absolute;z-index:0;opacity:0.0;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -91,10 +93,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous" style=""></script>
 </body>
 
+<script type="text/javascript" src="./js/PicShower.js"></script>
+
 <body>
 
-	<img src="Pic/S2P.png" height="60" width="100" id="LightDark" style="position:absolute;top:650px;left:1150px;">
-	<img src="Pic/KW.png" height="60" width="150" id="LightDark" style="position:absolute;top:650px;left:1250px;">
+	<img id="logo" src="Pic/SK.png" height="60" width="180" style="position:absolute;top:650px;left:1150px;">
 	
 </body>
 
