--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<span name="T1" id="Title1" style="font-weight:bold;position:relative;top:105px;left:-350px;z-index:3;font-size:24px;color:white;">Small2Space X KingWorld</span>
 </head>
 
+<script type="text/javascript" src="./js/Title.js"></script>
 
 <body>
 
@@ -49,7 +50,6 @@
 
 </body>
 
-<script type="text/javascript" src="./js/Select.js"></script>
 
 <body style="	background-image: url(&quot;Pic/BG.png&quot;);	background-position: top left;	background-size: 100%;	background-repeat: no-repeat;background-size:cover;background-color:#343135;">
   <div id = "picShower" class="py-0 px-0 pt-3" style="position:absolute;z-index:0;opacity:0.0;">
