--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
 </body>
 
-
+<script type="text/javascript" src="./js/Select.js"></script>
+	
 <body style="	background-image: url(&quot;Pic/BG.png&quot;);	background-position: top left;	background-size: 100%;	background-repeat: no-repeat;background-size:cover;background-color:#343135;">
   <div id = "picShower" class="py-0 px-0 pt-3" style="position:absolute;z-index:0;opacity:0.0;">
     <div class="container">
